@@ -804,6 +804,21 @@ font-weight:bold;
 font-family:"Arial";
 mso-ansi-language:<?replace insert-language?>;
 mso-list:l17 level2 lfo17;}
+p.QFID, li.QFID, div.QFID
+  {mso-style-name:"QF ID";
+  mso-margin-top-alt:auto;
+  margin-right:0in;
+  mso-margin-bottom-alt:auto;
+  margin-left:0in;
+  text-align:left;
+  line-height:12.0pt;
+  /* mso-line-height-rule:exactly; */
+  mso-pagination:widow-orphan;
+  page-break-after:avoid;
+  mso-ansi-language:<?replace insert-language?>;
+  font-size:9.0pt;
+  /*font-style:italic;*/
+  font-family:Arial;}
 
 
 p.MsoHeader, li.MsoHeader, div.MsoHeader
